--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <header id="header">
      
         <div class="nav">
-            <img src="/images/logo.svg" alt="">
+            <img src="images/logo.svg" alt="">
             <button>Try It Free</button>
         </div>
 
